--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -1,53 +1,52 @@
 <resources>
     <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notes</string>
-    <string name="widget_config">Thank you for using Simple Notes.\nFor more simple apps please visit SimpleMobileTools.com.\n</string>
-    <string name="cannot_share_empty_text">Cannot share empty text</string>
+    <string name="widget_config">Aèiû, jog naudojate Simple Notes.\nDaugiau paprastø programø rasite SimpleMobileTools.com.\n</string>
+    <string name="cannot_share_empty_text">Negalima dalintis tuðèiu tekstu</string>
     <string name="simple_note">Simple Note</string>
-    <string name="new_note">Add a new note</string>
-    <string name="no_title">Please name your note</string>
-    <string name="title_taken">A note with that title already exists</string>
-    <string name="open_note">Open note</string>
-    <string name="delete_note">Delete note</string>
-    <string name="delete_note_prompt_title">Delete note</string>
-    <string name="delete_note_prompt_message">Are you sure you want to delete note \"%1$s\"?</string>
-    <string name="pick_a_note">Pick a note</string>
-    <string name="rename_note">Rename note</string>
-    <string name="general_note">General note</string>
-    <string name="create_new_note">Create a new note</string>
-    <string name="add_to_note">Add to note</string>
+    <string name="new_note">Pridëti naujà áraðà</string>
+    <string name="no_title">Áraðo pavadinimas</string>
+    <string name="title_taken">Áraðas tokiu pavadinimu jau egzistuoja</string>
+    <string name="open_note">Atverti áraðà</string>
+    <string name="delete_note">Iðtrinti áraðà</string>
+    <string name="delete_note_prompt_title">Iðtrinti áraðà</string>
+    <string name="delete_note_prompt_message">Ar tikrai norite iðtrinti áraðà \"%1$s\"?</string>
+    <string name="pick_a_note">Pasirinkti áraðà</string>
+    <string name="rename_note">Pervadinti áraðà</string>
+    <string name="general_note">Pagrindinis áraðas</string>
+    <string name="create_new_note">Kurti naujà áraðà</string>
+    <string name="add_to_note">Pridëti á áraðà</string>
 
     <!-- File notes -->
-    <string name="open_file">Open file</string>
-    <string name="export_as_file">Export as file</string>
-    <string name="file_too_large">File too large, the limit is 10MB</string>
-    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
-    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
-    <string name="delete_file_itself">Also delete file \"%1$s\"</string>
-    <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
-    <string name="display_success_message">Display save success messages</string>
+    <string name="open_file">Atverti failà</string>
+    <string name="export_as_file">Kurti kopijà</string>
+    <string name="file_too_large">Failas per didelis, didþiausias leistinas dydis yra 10MB</string>
+    <string name="only_import_file_content">Ákelti tik áraðo turiná\n(Talpinant áraðà jis nebus paveiktas)</string>
+    <string name="update_file_at_note">Atnaujinti failà kai atnaujinamas áraðas\n(Áraðas iðtrinamas, jei iðtrinamas failas ar pakeièiama talpinimo vieta)</string>
+    <string name="delete_file_itself">Taip pat iðtrinti failà \"%1$s\"</string>
+    <string name="note_saved_successfully">Áraðas \"%1$s\" sëkmingai iðsaugotas</string>
+    <string name="display_success_message">Rodyti sëkmingo iðsaugojimo praneðimus</string>
 
     <!-- Settings -->
-    <string name="widget_note">Note used in widget</string>
-    <string name="links_and_emails_clickable">Make links and emails clickable</string>
-    <string name="place_cursor_end">Place cursor to the end of note</string>
-    <string name="gravity">Gravity</string>
-    <string name="left">Left</string>
-    <string name="center">Center</string>
-    <string name="right">Right</string>
+    <string name="widget_note">Áraðas panaudotas ðaukinyje</string>
+    <string name="links_and_emails_clickable">Paspaudþiamos nuorodos ir elektroninio paðto adresai</string>
+    <string name="place_cursor_end">Perkelti þymeklá á áraðo pabaigà</string>
+    <string name="gravity">Átrauka</string>
+    <string name="left">Kairëje</string>
+    <string name="center">Centre</string>
+    <string name="right">Deðinëje</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">A simple textfield for adding quick notes, without ads.</string>
+    <string name="app_short_description">PAprasta programa kurti áraðams, be reklamø.</string>
     <string name="app_long_description">
-        Need to take a quick note of something to buy, an address, or a startup idea? Then this is the app you\'ve been looking for! No complicated setup steps needed, just type in what you came for. Comes with autosave, so you will not discard your changes by mistake. Supports creating multiple independent notes.
+        Norite greitai uþsiraðyti mintá, kà reikia nupirkti, adresà ar verslo pradþios idëjà? Tada tai bûtent ði programa, kurios ieðkote! Nëra sudëtingø nustatymø þingsniø, tiesiog raðykite kà norite. Áraðø automatinis iðsaugojimas uþtikrina, jog neprarasite jø per klaidà. Galimas keliø nesusijusiø áraðø kûrimas.
 
+        Bet kada galite pasiekti áraðà naudodami ðaukiná, kuris iðsyk atveria programà.
 
-        You can access the note in no time by using the customizable and resizable widget, which opens the app on click.
+        Neturi reklamø ar nereikalingø leidimø. Visiðkai atviro kodo, turi tamsià temà.
 
-        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.
-
-        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
+        Tai tik viena ið daugelio programø. Kitas galite rasti èia http://www.simplemobiletools.com
     </string>
 
     <!--
