--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,15 +14,15 @@
     <string name="pick_a_note">Choisir une note</string>
     <string name="rename_note">Renomme la note</string>
     <string name="general_note">Note générale</string>
-    <string name="create_new_note">Create a new note</string>
-    <string name="add_to_note">Add to note</string>
+    <string name="create_new_note">Créer une nouvelle note</string>
+    <string name="add_to_note">Ajouter à la note</string>
 
     <!-- File notes -->
     <string name="open_file">Ouvrir le fichier</string>
     <string name="export_as_file">Exporter dans un fichier</string>
     <string name="file_too_large">Taille du fichier trop importante, la limite est de 10MB</string>
-    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
-    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
+    <string name="only_import_file_content">Importer seulement le contenu du fichier\n(changer le fichier n\'affectera pas la note)</string>
+    <string name="update_file_at_note">Metttre à jour le fichier lui-même lors de la mise à jour de la note\n(la note est supprimée si le fichier est supprimé, ou que le chemin change)</string>
     <string name="delete_file_itself">Supprimer également le fichier \"%1$s\"</string>
     <string name="note_saved_successfully">Note \"%1$s\" sauvegardée avec succès</string>
     <string name="display_success_message">Afficher les messages de succès de sauvegarde</string>
@@ -30,7 +30,7 @@
     <!-- Settings -->
     <string name="widget_note">Note utilisée dans le widget</string>
     <string name="links_and_emails_clickable">Rendre les liens et les emails cliquables</string>
-    <string name="place_cursor_end">Place cursor to the end of note</string>
+    <string name="place_cursor_end">Placer le curseur à la fin de la note</string>
     <string name="gravity">Gravité</string>
     <string name="left">Gauche</string>
     <string name="center">Centre</string>
