--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -31,6 +31,7 @@
     <string name="widget_note">Widget-Notiz</string>
     <string name="links_and_emails_clickable">Links und E-Mail Adressen anklickbar</string>
     <string name="place_cursor_end">Place cursor to the end of note</string>
+    <string name="monospaced_font">Use monospaced font</string>
     <string name="gravity">Ausrichtung</string>
     <string name="left">Linksbündig</string>
     <string name="center">Zentriert</string>
