--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -30,6 +30,7 @@
     <!-- Settings -->
     <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="place_cursor_end">Place cursor to the end of note</string>
+    <string name="monospaced_font">Use monospaced font</string>
     <string name="widget_note">ウィジェットで使用するメモ</string>
     <string name="gravity">重力</string>
     <string name="left">左</string>
