--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -9,8 +9,7 @@
     <string name="title_taken">Já existe uma nota com este título</string>
     <string name="open_note">Abrir nota</string>
     <string name="delete_note">Apagar nota</string>
-    <string name="delete_note_prompt_title">Apagar nota</string>
-    <string name="delete_note_prompt_message">Deseja mesmo apagar a nota \"%1$s\"?</string>
+    <string name="delete_note_prompt_message">Deseja mesmo apagar a nota \"%s\"?</string>
     <string name="pick_a_note">Selecione uma nota</string>
     <string name="rename_note">Renomear nota</string>
     <string name="general_note">Nota geral</string>
@@ -23,8 +22,8 @@
     <string name="file_too_large">Arquivo muito grande, o limite é 10 MB</string>
     <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
     <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
-    <string name="delete_file_itself">Apagar também o arquivo \"%1$s\"</string>
-    <string name="note_saved_successfully">Nota \"%1$s\" guardada com sucesso</string>
+    <string name="delete_file_itself">Apagar também o arquivo \"%s\"</string>
+    <string name="note_saved_successfully">Nota \"%s\" guardada com sucesso</string>
     <string name="display_success_message">Mostrar mensagens de gravação com sucesso</string>
 
     <!-- Settings -->
@@ -42,7 +41,6 @@
     <string name="app_short_description">Um campo de texto para adicionar as suas notas.</string>
     <string name="app_long_description">
         Precisa escrever uma nota sobre algo? Então este aplicativo é para você! Sem complicações, basta escrever o seu texto na nota. As notas são salvas automaticamente, para que não as perca inesperadamente. Possui suporte a diversas notas independentes.
-
 
         Pode abrir o aplicativo e acessar sua nota através de um toque no widget.
 
