--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,7 @@
     <string name="title_taken">A note with that title already exists</string>
     <string name="open_note">Open note</string>
     <string name="delete_note">Delete note</string>
-    <string name="delete_note_prompt_title">Delete note</string>
-    <string name="delete_note_prompt_message">Are you sure you want to delete note \"%1$s\"?</string>
+    <string name="delete_note_prompt_message">Are you sure you want to delete note \"%s\"?</string>
     <string name="pick_a_note">Pick a note</string>
     <string name="rename_note">Rename note</string>
     <string name="general_note">General note</string>
@@ -23,8 +22,8 @@
     <string name="file_too_large">File too large, the limit is 10MB</string>
     <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
     <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
-    <string name="delete_file_itself">Also delete file \"%1$s\"</string>
-    <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
+    <string name="delete_file_itself">Also delete file \"%s\"</string>
+    <string name="note_saved_successfully">Note \"%s\" saved successfully</string>
     <string name="display_success_message">Display save success messages</string>
 
     <!-- Settings -->
@@ -42,7 +41,6 @@
     <string name="app_short_description">A simple textfield for adding quick notes, without ads.</string>
     <string name="app_long_description">
         Need to take a quick note of something to buy, an address, or a startup idea? Then this is the app you\'ve been looking for! No complicated setup steps needed, just type in what you came for. Comes with autosave, so you will not discard your changes by mistake. Supports creating multiple independent notes.
-
 
         You can access the note in no time by using the customizable and resizable widget, which opens the app on click.
 
