adding Slovak translation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notas</string>
-    <string name="widget_config">Gracias por usar Simple Notes.\nPara más aplicaciones simples, por favor visite SimpleMobileTools.com.\n</string>
+    <string name="widget_config">Gracias por usar Simple Notes.\nPara más aplicaciones simples, por favor visite SimpleMobileTools.com.</string>
     <string name="cannot_share_empty_text">No se puede compartir una nota vacía</string>
     <string name="simple_note">Nota simple</string>
     <string name="new_note">Añadir una nueva nota</string>
