--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,7 +1,7 @@
 ﻿<resources>
     <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">メモ</string>
-    <string name="widget_config">シンプルメモのご利用ありがとうございます。\n他のシンプルアプリは SimpleMobileTools.com をご覧ください。\n</string>
+    <string name="widget_config">シンプルメモのご利用ありがとうございます。\n他のシンプルアプリは SimpleMobileTools.com をご覧ください。</string>
     <string name="cannot_share_empty_text">空のテキストは共有できません</string>
     <string name="simple_note">シンプル メモ</string>
     <string name="new_note">新しいメモを追加</string>
