--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -31,7 +31,7 @@
     <string name="links_and_emails_clickable">Paspaudþiamos nuorodos ir elektroninio paðto adresai</string>
     <string name="place_cursor_end">Perkelti þymeklá á áraðo pabaigà</string>
     <string name="monospaced_font">Use monospaced font</string>
-    <string name="gravity">Átrauka</string>
+    <string name="alignment">Átrauka</string>
     <string name="left">Kairëje</string>
     <string name="center">Centre</string>
     <string name="right">Deðinëje</string>
