--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -31,7 +31,7 @@
     <string name="links_and_emails_clickable">Spraviť odkazy a emaily klikateľnými</string>
     <string name="place_cursor_end">Umiestniť kurzor na koniec poznámky</string>
     <string name="monospaced_font">Použiť písmo Monospace</string>
-    <string name="gravity">Zarovnanie</string>
+    <string name="alignment">Zarovnanie</string>
     <string name="left">Vľavo</string>
     <string name="center">Uprostred</string>
     <string name="right">Vpravo</string>
