--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="monospaced_font">Use monospaced font</string>
-    <string name="gravity">Gravity</string>
+    <string name="alignment">Alignment</string>
     <string name="left">Left</string>
     <string name="center">Center</string>
     <string name="right">Right</string>
